# FavSpot

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/board/: views.py
backend/notification/: models.py  routing.py  urls.py
backend/notification/migrations/: 0001_initial.py
backend/pin/: paginations.py
backend/pin/migrations/: 0004_pin_place_id.py
backend/user/: admin.py  models.py  serializers.py  views.py
backend/user/migrations/: 0001_initial.py
config/: requirements.txt
config/nginx/: nginx.conf
everyplace/: pyproject.toml
everyplace/app/: asgi.py  middleware.py  settings.py  urls.py
everyplace/board/: admin.py  consumers.py  excluded_path.py  models.py  serializers.py  urls.py  views.py
everyplace/board/migrations/: 0001_initial.py  0002_alter_board_tags.py  0002_initial.py  0003_alter_board_tags.py  0003_board_is_public_alter_board_tags.py
everyplace/notification/: consumers.py  models.py  serializers.py  urls.py  views.py
everyplace/notification/migrations/: 0002_notification_related_url.py
everyplace/pin/: admin.py  models.py  serializers.py  urls.py  views.py
everyplace/pin/migrations/: 0001_initial.py  0002_initial.py  0002_pin_menu_pin_thumbnail_img_alter_pin_category_and_more.py  0003_alter_pincontent_pin_id.py  0003_remove_pin_menu.py  0004_pin_place_id.py
everyplace/user/: models.py  serializers.py  urls.py  views.py
everyplace/user/migrations/: 0002_alter_user_profile_img.py
front/: index.html
front/assets/css/: map.css
frontend/: index.html
src/backend/: pyproject.toml
src/frontend/: index.html
(+187 files in other folders)
